...
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ShiftCreatorActivity"
    tools:showIn="@layout/activity_shift_creator">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/shift_creator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5mm"
        android:padding="1mm"
        app:columnCount="2">

...
            android:layout_height="wrap_content"
            android:layout_margin="1mm"
            android:layout_weight="1"
            android:text="Name:" />

        <EditText
            android:id="@+id/scEditTextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1mm"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
...
