<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/iSettings"
        android:title="Settings" />
    <item
        android:id="@+id/iEmployers"
        android:title="Employers" />
    <item
        android:id="@+id/iShifts"
        android:title="Shifts" />
    <item
        android:id="@+id/iGoTo"
        android:title="Go to" />
</menu>
