...
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabShiftSelector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:src="@android:color/transparent"
                android:visibility="invisible"
                app:backgroundTint="@color/colorPrimary" />
...
                android:text="S"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />
        </FrameLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
            android:layout_gravity="end|bottom"
        app:backgroundTint="@color/colorPrimary"
        app:srcCompat="@drawable/ic_edit"
...
